# tervinal

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
res/: config.h.in
src/: main.cpp
